--- a/src/static/css/index.less
+++ b/src/static/css/index.less
@@ -1,4 +1,10 @@
-@import "./common/index";
+@import "variables.less";
+
+@import "normalize.less";
+@import "icon.less";
+@import "layout.less";
+
+@import "kit.less";
 
 @import "home";
 
